# rmatrix

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs
